<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>NotaryPage</class>
 <widget class="QWidget" name="NotaryPage">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>790</width>
    <height>400</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QLabel" name="notaryExplanation">
     <property name="text">
      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;You can create a unique notary ID from a file on your computer and embed it in the blockchain. You can use this to later prove that you had access to the data at a certain time.&lt;/p&gt;&lt;p&gt;Use the Notarize and Search buttons below to record a notary ID or search the CLAM blockchain for one.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
     <property name="wordWrap">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item>
    <layout class="QFormLayout" name="formLayout_6">
     <property name="fieldGrowthPolicy">
      <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
     </property>
     <item row="0" column="0">
      <widget class="QLabel" name="label_2">
       <property name="text">
        <string>File: </string>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <widget class="QLineEdit" name="sendNotaryEntry">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
           <horstretch>1</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="placeholderText">
          <string>Enter a file name</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="selectFileButton">
         <property name="text">
          <string>Select File...</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="calcNotaryIDbutton">
         <property name="text">
          <string>Generate Notary ID</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label">
       <property name="text">
        <string>Notary ID:</string>
       </property>
      </widget>
     </item>
     <item row="1" column="1">
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
        <widget class="QLineEdit" name="notaryIDEdit">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
           <horstretch>1</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="readOnly">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="sendNotaryButton">
         <property name="toolTip">
          <string>Record notary ID in the CLAM blockchain.</string>
         </property>
         <property name="text">
          <string>Notarize</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="searchNotaryButton">
         <property name="toolTip">
          <string>Search for notary ID in the CLAM blockchain.</string>
         </property>
         <property name="text">
          <string>Search </string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QVBoxLayout" name="searchSectionLayout">
     <item>
      <widget class="QLabel" name="searchNotaryLabel">
       <property name="text">
        <string>Search results:</string>
       </property>
       <property name="wordWrap">
        <bool>true</bool>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QTableWidget" name="tableWidget">
       <attribute name="horizontalHeaderHighlightSections">
        <bool>false</bool>
       </attribute>
       <attribute name="verticalHeaderVisible">
        <bool>false</bool>
       </attribute>
       <attribute name="verticalHeaderHighlightSections">
        <bool>false</bool>
       </attribute>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
  <zorder>label</zorder>
  <zorder>sendNotaryButton</zorder>
  <zorder>sendNotaryButton</zorder>
  <zorder>searchNotaryButton</zorder>
  <zorder>label_2</zorder>
  <zorder>label_2</zorder>
  <zorder>formLayoutWidget</zorder>
 </widget>
 <resources/>
 <connections/>
</ui>
